tests/pass/gen_struct_infer.us
struct List<T> {
    head:T,
    body:T
}


fn main() -> List<i32> {
    let list = List{
        head:10,
        body:10
    };

    list;
}
