tests/fail/unique_tys.us
type char = u8;

struct List {
    head:i32,
    body:nil
}
struct List2 {
    head:i32,
    body:nil
}

fn main() -> List {
    let list = List2 {
        head:10,
        body:nil
    };

    return list;
}

 // Expect : struct `List` != struct `List2`